# libhelloworld

./: README.md  configure.ac
src/: Makefile.am  hello.cpp  hello.h
test/hello/: Makefile.am  helloworld.cpp
