AC_INIT([libhello], [0.1], [adrian.moreno@gmx.com])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])

AC_PROG_CXX 
AM_PROG_AR 

LT_INIT()

AC_CONFIG_HEADERS([config.h])

AC_CONFIG_FILES([
                 Makefile
                  src/Makefile
                  test/Makefile
                  test/hello/Makefile
                   ])
AC_OUTPUT
